# mlr

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: example.cpp
include/MLR/: align.hpp  fixed_valarray.hpp  mlr.hpp  scalar.hpp  vector.hpp
include/mlr/: array.hpp  buffer.hpp  color.hpp  idlib.hpp  matrix.hpp  mlr.hpp  scalar.hpp  vector.hpp
old/: color.hpp  geo.hpp  matrix.hpp  quake.hpp  quake.md  quake_example.cpp  sse.hpp
